# RareSim-Master-Project-

./: .env  .gitignore  README.md  pipeline_draft.drawio  pyproject.toml  pyrightconfig.json  requirements.txt  requirements_server.txt  run_medical_cases_extraction.py  standardize_phenopackets.py  standardized.json  todo.txt  useful_cmd.txt
data/: README.md
data/patient_profiles/: example_patient.json  patient_001_2026-05-10T20-40-22.json  patient_001_2026-05-10T21-04-19.json  patient_001_2026-05-10T21-19-39.json
docs/drawio/: pipeline_draft.drawio
docs/notebooks/: hpo_overview.ipynb  hpoa_overview.ipynb  ordo_overview.ipynb
evaluation/: _batch_utils.py  evaluator.py  run_autoencoder.py  run_hpo2vec.py  run_llm.py  run_semantic.py  run_set_based.py  run_test_files.py  run_tfidf.py  run_transformer.py
ontologies/: hpo_graph.html  hpo_overview.ipynb  hpoa_overview.ipynb  load_models_to_local.py  ordo_overview.ipynb
ontologies/images/: hpo_graph_200  (+1 more)
pipelines/: check.py  hpo2vec_pipeline.py  semantic_pipeline.py  set_based_comparer.py  tfidf_pipeline.py  transformer_hf_pipeline.py  transformer_pipeline.py  utils.py
raresim-frontend/: index.html  package-lock.json  package.json
scripts/: run_medical_cases_extraction.py
src/: build_shared_artifacts.py  config.py  disease_profiles.py  graph_builder.py  graph_resetter.py  hpo_utils.py  ic.py  loaders.py  normalizers.py  patient_loader.py  schemas.py
validation_tools/: compare_methods.py  results.txt  run_dx29_phrank.py  run_dx29_search.py  run_lirical.py  run_phenobrain.py  run_phenomiser.py  utils.py
(+2787 files in other folders)
